// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-assets/instagram Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17934169565396380",
    "url": "https://www.instagram.com/p/CiLMrsEqAYE/",
  },
}
`;

exports[`social-media/upload-assets/instagram UploadAssetViaUrl should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17985138253529188",
  },
}
`;
